# camera_calibration_cpp

./: .gitignore  CMakeLists.txt  build.sh  input.xml  out_camera_data.xml  settings.xml
src/: camera_calibration.cpp  extract_frame.py
